--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
-    "build": "npm build",
+    "build": "npm run build",
     "dev": "nodemon server.js --exec babel-node"
   },
   "keywords": [],
