--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@babel/cli": "^7.25.6",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
+    "webpack": "^5.80.0",
     "webpack-cli": "^5.1.4"
   }
 }
