--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb+srv://sofiestrahl:7ZrFZt8H5jJsWNJ@cluster0.4nv9ke8.mongodb.net/klangrum?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb+srv://sofiestrahl1:yHWl3tREWPIxAT52@cluster0.qjkkmt1.mongodb.net/klangrum
+?retryWrites=true&w=majority&appName=Cluster0"
 RESET_DB=true
