new connection string

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-MONGO_URL="mongodb+srv://sofiestrahl1:yHWl3tREWPIxAT52@cluster0.qjkkmt1.mongodb.net/klangrum
-?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb+srv://sofiestrahl:MfK4KBsybcpRwbLA@cluster0.mrxn1.mongodb.net/klangrum?retryWrites=true&w=majority&appName=Cluster0"
 RESET_DB=true
