--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.cjs",
     "dev": "nodemon server.js --exec babel-node"
   },
   "keywords": [],
@@ -30,7 +30,7 @@
     "@babel/cli": "^7.25.6",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
-    "webpack": "^5.80.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
 }
