still working on trying to seed data and connect to Atlas

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb+srv://sofiestrahl:MfK4KBsybcpRwbLA@cluster0.mrxn1.mongodb.net/klangrum?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb+srv://sofiestrahl:MfK4KBsybcpRwbLA@cluster0.mongodb.net/klangrum?retryWrites=true&w=majority&appName=Cluster0"
+PORT=8080
 RESET_DB=true
