added middleware and authUserToken with jwt

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URL="mongodb+srv://sofiestrahl1:yHWl3tREWPIxAT52@cluster0.qjkkmt1.mongodb.
 ?retryWrites=true&w=majority&appName=Cluster0"
 PORT=8080
 RESET_DB=true
+JWT_SECRET=B&DnznzjXx7W%FkQx4%ye^FNjVj^5zMoXkf45
